(Responsive) Fix login page being wrongly resized on mobile

--- a/statics/css/style_v2.sass
+++ b/statics/css/style_v2.sass
@@ -11,11 +11,11 @@ a
     transition: color 0.2s
 
 html
-    height: 100%
+    min-height: 100%
 
 body
     position: relative
-    min-height: 100%
+    min-height: 100vh
     margin: 0
     box-sizing: border-box
     padding-bottom: 60px
@@ -36,18 +36,17 @@ h2
     margin: 0 0
     padding: 0 0
     width: auto
+    box-sizing: border-box
     padding: 10px
 
 .centered
     text-align: center
 
+
 .centered-row
-    position: absolute
-    width: 100%
-    top: 50%
-    left: 50%
-    -ms-transform: translate(-50%, -50%)
-    transform: translate(-50%, -50%)
+    display: flex
+    justify-content: center
+    align-items: center
 
 #login-container
     background-color: rgba(255, 255, 255, 0.7)
@@ -471,7 +470,7 @@ main
     height: 100%
     display: flex
     align-items: stretch
-    margin: 20px 0
+    padding: 20px 0
 
     .col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12
         width: 100%
